# doombuoy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CICD_SETUP.md
.github/workflows/: publish.yml  test.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/doombuoy/: __init__.py
src/doombuoy/data/: sets.py
tests/: test_doombuoy.py
