[tool.poetry]
name = "doombuoy"
version = "2025.0.0.9"
description = "will help you decide the best models for prediction"
authors = ["Agam Singh Saini"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
numpy = "^2.3.2"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
catboost = "^1.2.8"
lightgbm = "^4.6.0"
xgboost = "^3.0.4"
statsmodels = "^0.14.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
