[tool.poetry]
name = "doombuoy"
version = "2025.0.0.18"
description = "will help you decide the best models for prediction"
authors = ["Agam Singh Saini"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
numpy = "^2.3.2"
pandas = "2.2.2"
scikit-learn = "1.5.1"
catboost = "^1.2.8"
lightgbm = "4.4.0"
xgboost = "2.1.0"
statsmodels = "^0.14.5"
jupyterlab = "4.2.3"
joblib = "1.4.2"
hyperopt = "0.2.7"
lime = "0.2.0.1"
wandb = "0.17.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
